# job_agent

./: .gitignore  README.md  main.py  pyproject.toml
backend/app/: config.py
backend/app/agent/: patent_analysis_agent.py
backend/app/api/: main.py
backend/app/api/routes/: intelligence.py  risk.py
backend/app/models/: agent_structs.py  schemas.py
backend/app/rag/: index.py  loader.py  loader_postgre.py
backend/app/services/: intelligence_service.py  llm_service.py  patent_service.py  report_service.py  risk_service.py
